Configuring the Application Configuring Quarkus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 books.genre=IT
+quarkus.log.category."io.quarkus".level=DEBUG
+quarkus.log.category."org.agoncal".level=TRACE
+quarkus.banner.enabled=false
