Configuring the Application Adding Profiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
-books.genre=IT
-quarkus.log.category."io.quarkus".level=DEBUG
-quarkus.log.category."org.agoncal".level=TRACE
+books.genre=Information Technology
+%staging.books.genre=MyOwnGenge
+%dev.books.genre=Drama
+%test.books.genre=IT
+
+quarkus.log.category."io.quarkus".level=WARNING
+%dev.quarkus.log.category."io.quarkus".level=INFO
+#quarkus.log.category."org.agoncal".level=TRACE
 quarkus.banner.enabled=false
+
+%dev.qurkus.log.console.level=DEBUG
+%test.qurkus.log.console.level=TRACE
+
