Packaging the Application Building Executable JARs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ books.genre=Information Technology
 %dev.books.genre=Drama
 %test.books.genre=IT
 
-quarkus.log.category."io.quarkus".level=WARNING
+%staging.quarkus.log.category."io.quarkus".level=WARNING
 %dev.quarkus.log.category."io.quarkus".level=INFO
 #quarkus.log.category."org.agoncal".level=TRACE
 quarkus.banner.enabled=false
