--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -21,7 +21,9 @@ WORKDIR /work/
 RUN chown 1001 /work \
     && chmod "g+rwX" /work \
     && chown 1001:root /work
-COPY --chown=1001:root --chmod=0755 target/*-runner /work/application
+#COPY --chown=1001:root --chmod=0755 target/*-runner /work/application
+COPY --chown=1001:root target/*-runner /work/application
+RUN chmod 0755 /work/application
 
 EXPOSE 8080
 USER 1001
